@@ -1,11 +1,13 @@
-<extension type="component" version="1.6">
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id$ -->
+
+<install type="component" version="1.6.0">
 	<name>Login</name>
-        <author>Joomla! Project</author>
-        <copyright>(C) 2005 - 2008 Open Source Matters. All rights reserved.</copyright>
-        <license>http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
-        <authorEmail>admin@joomla.org</authorEmail>
-        <authorUrl>www.joomla.org</authorUrl>
-        <version>1.6.0</version>
-        <description>Login Component</description>
-        <administrator />
-</extension>
+	<author>Joomla! Project</author>
+	<copyright>(C) 2005 - 2009 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<version>1.6.0</version>
+	<description>Login Component</description>
+</install>
