@@ -1,0 +1,38 @@
+<?php
+/**
+ * @version		$Id$
+ * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License, see LICENSE.php
+ */
+
+// No direct access.
+defined('_JEXEC') or die;
+
+jimport( 'joomla.application.component.model' );
+
+/**
+ * Login Model
+ *
+ * @package		Joomla.Administrator
+ * @subpackage	com_login
+ * @since		1.5
+ */
+class LoginModelLogin extends JModel
+{
+	/**
+	 * Method to auto-populate the model state.
+	 *
+	 * This method should only be called once per instantiation and is designed
+	 * to be called on the first call to the getState() method unless the model
+	 * configuration flag to ignore the request is set.
+	 *
+	 * @return	void
+	 */
+	protected function _populateState()
+	{
+		$credentials = array();
+		$credentials['username'] = JRequest::getVar('username', '', 'method', 'username');
+		$credentials['password'] = JRequest::getVar('passwd', '', 'post', 'string', JREQUEST_ALLOWRAW);
+		$this->setState('credentials',$credentials);
+	}	
+}
